2003-05-18  Scott S. Goodwin  <scott@scottg.net>

        * nsopenssl.h, nsopenssl.c, init.c: Added NsOpenSSLServers structure
          to manage per-virtual server information.

        * nsopenssl.c, init.c: Moved Tcl API initializion from nsopenssl.c to
          init.c.

2003-05-17  Scott S. Goodwin  <scott@scottg.net>

        * Makefile: cleaned up tagging and file release targets.

        * init.c, nsopenssl.c: Added NsOpenSSLInit; cleaned up InitOpenSSL and
          SeedPRNG; got rid of PRNGIsSeeded, AddEntropyFromRandomFile. Added a
          global nsopenssl section to the config file that sets parameters
          that are non-virtual server specific, and it looks like this:

          ns_section "ns/module/nsopenssl"
          ns_param RandomFile /tmp/random
          ns_param SeedBytes  1024
          ns_param MaxSeedBytes  1024000

2003-05-08  Scott S. Goodwin  <scott@scottg.net>

        * Released nsopenssl 2.1a

        NOTE: nsopenssl 2.1a was released as a fix based on code up to
        2002-02-13 in this ChangeLog. All entries after 2002-02-13 are changes
        I made to a local development copy. I'm now merging this into the
        v2_1_bp and working in 2.2. 

        * ssl.c: fixed problem where if an nsopenssl connection was broken
        during a file upload or other POST request, the thread would
        continue trying to read from the socket. Thanks to Wayport Inc's
        John Wright, Matthew Krenzer and to Arena Inc's Eric Larkin, and to
        Simos Gabrielidis for both identifying the problem and helping me
        duplicate it so I could fix it. Special thanks to Wayport for
        hammering it under a tremendous load to see if it would break (it
        didn't).


2002-11-21  Scott Goodwin  <scott@scottg.net>

	* Makefile: Add a definition for $(CP). AOLserver 4.x uses the
	install program instead of CP like AOLserver 3.x. Need to update
	nsopenssl to compile using the appropriate method for 3.x and 4.x.
