@@ -67,6 +67,10 @@ Tcl_HashTable NsOpenSSLServers;
 /* Linked list of all configured nsopenssl instances */
 static NsOpenSSLDriver *firstSSLDriverPtr;
 
+/* Mandatory for export browsers */
+static RSA *IssueTmpRSAKey (SSL * ssl, int export, int keylen);
+
+
 #ifndef NS_MAJOR_VERSION
 
 /*
@@ -170,6 +174,144 @@ Ns_ModuleInit (char *server, char *module)
 			  NS_DRIVER_SSL);
 #endif
 }
+
+
+/*
+ *----------------------------------------------------------------------
+ *
+ * Ns_OpenSSLContextCreate --
+ *
+ *       Create a new Ns_OpenSSLContext structure
+ *
+ * Results:
+ *       Pointer to resulting struct or NULL on error
+ *
+ * Side effects:
+ *       Memory is allocated. All structure values are set to defaults.
+ *       These defaults can be overridden by calls to the
+ *       Ns_OpenSSLContext* functions.
+ *
+ *----------------------------------------------------------------------
+ */
+
+Ns_OpenSSLContext *
+Ns_OpenSSLContextCreate (char *server, char *module, char *name)
+{
+    Ns_OpenSSLContext *sslContext;
+    Ns_DString ds;
+
+    /* XXX need to insert the name into the server's hash list */
+
+    /* XXX perform SSL context name collision check here */
+#if 0
+     /* The name of an SSL context must be unique within a virtual server */
+
+    if (Ns_OpenSSLContextExists (server, module, name)) {
+            Ns_Log(Error, "%s: SSL context with name %s already defined",
+                            MODULE, name);
+            return NULL;
+    } else {
+        Ns_OpenSSLContextAdd (server, module, name);
+    }
+#endif
+
+    sslContext = ns_calloc(1, sizeof(*sslContext));
+    sslContext->server = server;
+    sslContext->module = module;
+    sslContext->name = name;
+
+    /* 
+     * WARNING: session cache ids are global to the OpenSSL library. This means
+     * that if another AOLserver module uses the OpenSSL library for SSL
+     * connections that use session caching, some coordination will be
+     * necessary so cache ids don't collide.
+     */
+
+    //Ns_MutexLock(&nextSessionCacheId->lock);
+    //sslContext->sessionCacheId = nextSessionCacheId->id;
+    //nextSessionCacheId->id++;
+    //Ns_MutexUnlock(&nextSessionCacheId->lock);
+
+    /*
+     * Set initial default values that can be overridden in configuration file,
+     * C API and Tcl API.
+     */
+
+    Ns_DStringInit (&ds);
+
+    Ns_HomePath (&ds, "servers", server, "modules", module, NULL);
+    sslContext->moduleDir = Ns_DStringExport(&ds);
+    Ns_DStringTrunc(&ds, 0);
+
+    Ns_HomePath (&ds, "servers", server, "modules", module, DEFAULT_CERT_FILE, NULL);
+    sslContext->certFile = Ns_DStringExport(&ds);
+    Ns_DStringTrunc(&ds, 0);
+
+    Ns_HomePath (&ds, "servers", server, "modules", module, DEFAULT_KEY_FILE, NULL);
+    sslContext->keyFile = Ns_DStringExport(&ds);
+    Ns_DStringTrunc(&ds, 0);
+
+    Ns_HomePath (&ds, "servers", server, "modules", module, DEFAULT_CA_FILE, NULL);
+    sslContext->caFile = Ns_DStringExport(&ds);
+    Ns_DStringTrunc(&ds, 0);
+
+    Ns_HomePath (&ds, "servers", server, "modules", module, DEFAULT_CA_DIR, NULL);
+    sslContext->caDir = Ns_DStringExport(&ds);
+    Ns_DStringTrunc(&ds, 0);
+
+    Ns_DStringFree (&ds);
+
+    sslContext->peerVerify          = DEFAULT_PEER_VERIFY;
+    sslContext->peerVerifyDepth     = DEFAULT_PEER_VERIFY_DEPTH;
+    sslContext->protocols           = DEFAULT_PROTOCOLS;
+    sslContext->cipherSuite         = DEFAULT_CIPHER_SUITE;
+    sslContext->sessionCache        = DEFAULT_SESSION_CACHE;
+    sslContext->sessionCacheSize    = DEFAULT_SESSION_CACHE_SIZE;
+    sslContext->sessionCacheTimeout = DEFAULT_SESSION_CACHE_TIMEOUT;
+    sslContext->trace               = DEFAULT_TRACE;
+
+    /* XXX does this belong here or in an init function ??? */
+    /* XXX i.e. do I want to load SSL_CTX as a last phase? */
+    if (sslContext->role == ROLE_SSL_SERVER) {
+        sslContext->sslctx = SSL_CTX_new (SSLv23_server_method());
+    } else {
+        sslContext->sslctx = SSL_CTX_new (SSLv23_client_method());
+    }
+
+    /* So we can get to SSL context pointer in an OpenSSL callback */
+    SSL_CTX_set_app_data (sslContext->sslctx, sslContext);
+
+    /* Enable SSL bug compatibility */
+    SSL_CTX_set_options (sslContext->sslctx, SSL_OP_ALL);
+
+    /* This apparently prevents some sort of DH attack. */
+    SSL_CTX_set_options (sslContext->sslctx, SSL_OP_SINGLE_DH_USE);
+
+    /* Temporary key callback required for 40-bit export browsers */
+    SSL_CTX_set_tmp_rsa_callback (sslContext->sslctx, IssueTmpRSAKey);
+
+    /*
+     * Insert the context into the linked list. Instead of wasting time looking
+     * for the end of the list, we'll insert it at the front.
+     */
+
+    /* XXX lock firstSSLContext before modifying */
+    //if (firstSSLContext != NULL) {
+            /* There are already other contexts */
+    //        sslContext->next = firstSSLContext;
+    //        firstSSLContext = sslContext;
+    //} else {
+            /* We're the first context created */
+    //        sslContext->next = NULL;
+    //        firstSSLContext = sslContext;
+    //}
+
+    /* XXX need locking at startup? */
+    //Ns_MutexUnlock(&sslcontext->lock);
+
+    return sslContext;
+}
+
 
 /*
  *----------------------------------------------------------------------
@@ -914,3 +1056,48 @@ OpenSSLProc (Ns_DriverCmd cmd, Ns_Sock * sock, struct iovec * bufs, int nbufs)
 }
 
 #endif
+
+
+/*
+ *----------------------------------------------------------------------
+ *
+ * IssueTmpRSAKey --
+ *
+ *       Give out the temporary key when needed. This is a callback
+ *       function used by OpenSSL.
+ *
+ * Results:
+ *       Returns a pointer to the new temporary key.
+ *
+ * Side effects:
+ *       Attempts to Seed the PRNG if needed. If PRNG doesn't contain 
+ *       enough entropy, key won't be returned and the connection
+ *       will fail.
+ *
+ *----------------------------------------------------------------------
+ */
+
+static RSA *
+IssueTmpRSAKey (SSL *ssl, int export, int keylen)
+{
+    Ns_OpenSSLConn *scPtr;
+    NsOpenSSLDriver *sdPtr;
+    static RSA *rsa_tmp = NULL;
+
+    /* XXX do I need Ns_OpenSSLConn and Driver here? */
+    scPtr = (Ns_OpenSSLConn *) SSL_get_app_data (ssl);
+    sdPtr = scPtr->sdPtr;
+
+    rsa_tmp = RSA_generate_key (keylen, RSA_F4, NULL, NULL);
+    if (rsa_tmp != NULL) {
+        Ns_Log (Notice, "%s: Generated %d-bit temporary RSA key",
+            sdPtr->module, keylen);
+    } else {
+        Ns_Log (Warning,
+            "%s: Cannot generate temporary RSA key",
+            sdPtr->module);
+    }
+
+    return rsa_tmp;
+}
+
