@@ -1,3 +1,8 @@
+2003-05-19  Scott S. Goodwin  <scott@scottg.net>
+
+        * nsopenssl.h, nsopenssl.c, init.c, config.h: Added
+          Ns_OpenSSLContextCreate, LoadSSLContexts, LoadSSLContext.
+
 2003-05-18  Scott S. Goodwin  <scott@scottg.net>
 
         * nsopenssl.h, nsopenssl.c, init.c: Added NsOpenSSLServers structure
